--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 
     <title>sipedulikampus</title>
+
+<!-- Navbar -->
 </head>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <body>
@@ -47,6 +49,7 @@
 <div class="container">
 <div class="row justify-content-md-center">
 
+<!-- Home -->
 <body id="home">
 <div class="col-md-12 mt-6">
   <div class="row align-items-center col-md-12 mt-3">
@@ -66,6 +69,7 @@
 </div>
 </div>
 
+<!-- FAQ -->
 <div class="container pt-5 pb-5">
     <h2 class="fs-3 text-center" id="faq">FAQ</h2>
     <div class="row row-cols-1 row-cols-md-2 g-4 pt-4">
@@ -132,6 +136,7 @@
     </div>
   </div>
 
+    <!-- Footer -->
     <footer class="text-white text-center py-4 mt-5" style="background-color: #104c40">
       <div class="container">
         <p class="mb-2">© 2025 Si-Peduli Kampus. All Rights Reserved.</p>
