--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             Pengaduan
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="?menu=2">Buat Pengaduan</a></li>
+            <li><a class="dropdown-item" href="#pengaduan">Buat Pengaduan</a></li>
             <li><a class="dropdown-item" href="?menu=3">Riwayat Pengaduan</a></li>
           </ul>
         </li>
