--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             Pengaduan
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="pengaduan.html">Buat Pengaduan</a></li>
+            <li><a class="dropdown-item" href="?menu=2">Buat Pengaduan</a></li>
             <li><a class="dropdown-item" href="?menu=3">Riwayat Pengaduan</a></li>
           </ul>
         </li>
@@ -57,7 +57,7 @@
           <h1 class="text-start fs-1 ms-5" style="color: #104c40">SI-Peduli Kampus </h1>
           <h1 class="text-start fs-4 ms-5" style="color: #104c40">Sistem Informasi Pengaduan Layanan Kampus </h1>
           <a class="w-50 btn text-light ms-5 mb-2 mt-3" href="?menu=7" style="background-color: #d1a446" >SOP</a><br>
-          <a class="w-50 btn text-light ms-5 mb-2" href="pengaduan.html" style="background-color: #d1a446" >Buat Pengaduan</a>
+          <a class="w-50 btn text-light ms-5 mb-2" href="?menu=2" style="background-color: #d1a446" >Buat Pengaduan</a>
         </div>
         <div class="col-md-5 mt-5">
           <img src="img/uin.png" width="350">
