--- a/index.html
+++ b/index.html
@@ -1,28 +1,54 @@
-<?php 
-include "header.html";
-//Isi atau Content 
-//http://localhost/sipedulikampus/index.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-if(isset($_GET['menu'])){
-    if($_GET['menu']==2){
-        include "pengaduan.html";    
-    }else if($_GET['menu']==3){
-        include "riwayat.php";
+    <!-- Bootstrap Icon -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 
-    }else if($_GET['menu']==5){
-        include "masuk.php";
-    }else if($_GET['menu']==6){
-        include "akun.php";
-    }else if($_GET['menu']==7){
-        include "sop.php";
-    }else {
-        echo "Pilih Menu";
-    }
-}else{
-    
-}
-include "footer.php";
-?>
+    <title>sipedulikampus</title>
+
+<!-- Navbar -->
+</head>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<body>
+<div class="col-md-12">
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #104c40">
+  <div class="container-fluid">
+    <a class="navbar-brand fw-bold ms-5" href="#">
+        <img src="img/uin.png" alt="logo" width="40" height="34"> SI-Peduli Kampus
+    </a>
+    <a class=" btn text-light fs-6 ms-2" style="background-color: #d1a446" href="?menu=5">Masuk</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="index.php"><i class="bi bi-house"></i> Beranda</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Pengaduan
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="?menu=2">Buat Pengaduan</a></li>
+            <li><a class="dropdown-item" href="?menu=3">Riwayat Pengaduan</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="?menu=6"><i class="bi bi-person"></i> Akun</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+</div>
+<p>
+<div class="container">
+<div class="row justify-content-md-center">
+
 <!-- Home -->
 <body id="home">
 <div class="col-md-12 mt-6">
@@ -39,3 +65,5 @@ include "footer.php";
   </div>
 </div>
 </body>
+
+
