--- a/pengaduan.html
+++ b/pengaduan.html
@@ -24,7 +24,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.php"><i class="bi bi-house"></i> Beranda</a>
+          <a class="nav-link active" aria-current="page" href="index.html"><i class="bi bi-house"></i> Beranda</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -49,7 +49,7 @@
 
 <!-- Pengaduan -->
 <section id="pengaduan">
-<div class="col-lg-8 mt-5 justify-content-center">
+<div class="col-lg-8 mt-5">
 <h1>Tulis Aduan Baru</h1>
 <div class="container py-4">
 	<form class="row g-2" method='POST' action="ajukan.php">
