--- a/pengaduan.html
+++ b/pengaduan.html
@@ -49,7 +49,7 @@
 
 <!-- Pengaduan -->
 <section id="pengaduan">
-<div class="col-lg-8 mt-5">
+<div class="justify-content-center mt-5">
 <h1>Tulis Aduan Baru</h1>
 <div class="container py-4">
 	<form class="row g-2" method='POST' action="ajukan.php">
