--- a/pengaduan.html
+++ b/pengaduan.html
@@ -49,9 +49,9 @@
 
 <!-- Pengaduan -->
 <section id="pengaduan">
-<div class="justify-content-center mt-5">
+<div class="mt-5">
 <h1>Tulis Aduan Baru</h1>
-<div class="container py-4">
+<div class="container py-4 justify-content-center">
 	<form class="row g-2" method='POST' action="ajukan.php">
 		
         <div class="col-6">
