--- a/pengaduan.html
+++ b/pengaduan.html
@@ -31,8 +31,8 @@
             Pengaduan
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="?menu=2">Buat Pengaduan</a></li>
-            <li><a class="dropdown-item" href="?menu=3">Riwayat Pengaduan</a></li>
+            <li><a class="dropdown-item" href="pengaduan.html">Buat Pengaduan</a></li>
+            <li><a class="dropdown-item" href="riwayat.html">Riwayat Pengaduan</a></li>
           </ul>
         </li>
         <li class="nav-item">
