--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.php"><i class="bi bi-house"></i> Beranda</a>
+          <a class="nav-link active" aria-current="page" href="index.html"><i class="bi bi-house"></i> Beranda</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -32,7 +32,7 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="pengaduan.html">Buat Pengaduan</a></li>
-            <li><a class="dropdown-item" href="?menu=3">Riwayat Pengaduan</a></li>
+            <li><a class="dropdown-item" href="riwayat.html">Riwayat Pengaduan</a></li>
           </ul>
         </li>
         <li class="nav-item">
