Update and rename riwayat.php to riwayat.html

--- a/riwayat.html
+++ b/riwayat.html
@@ -34,7 +34,7 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="pengaduan.html">Buat Pengaduan</a></li>
-            <li><a class="dropdown-item" href="riwayat.php">Riwayat Pengaduan</a></li>
+            <li><a class="dropdown-item" href="riwayat.html">Riwayat Pengaduan</a></li>
           </ul>
         </li>
         <li class="nav-item">
@@ -49,6 +49,8 @@
 <div class="container">
 <div class="row justify-content-md-center">
 
+<!-- Riwayat -->
+<section id="pengaduan">
 <div class="mt-5">
     <div class="card mt-5">
         <div class="card-body">
@@ -90,10 +92,9 @@
         </div>
     </div>
 </div>
+</section>
 
-</div>
-</div>
-
+<!-- FAQ-->
 <div class="container pt-5 pb-5">
     <h2 class="fs-3 text-center" id="faq">FAQ</h2>
     <div class="row row-cols-1 row-cols-md-2 g-4 pt-4">
@@ -160,6 +161,7 @@
     </div>
   </div>
 
+    <!-- Footer -->
     <footer class="text-white text-center py-4 mt-5" style="background-color: #104c40">
       <div class="container">
         <p class="mb-2">© 2025 Si-Peduli Kampus. All Rights Reserved.</p>
