--- a/index.html
+++ b/index.html
@@ -131,24 +131,33 @@
     </div>
   </div>
 
-    <!-- Footer -->
-    <footer class="text-white text-center py-4 mt-5" style="background-color: #104c40">
-      <div class="container">
-        <p class="mb-2">© 2025 Si-Peduli Kampus. All Rights Reserved.</p>
-        <div class="mb-auto d-flex justify-content-center gap-4" style="margin-left: 50px;"> <!-- Menambahkan margin kiri yang lebih besar -->
-          <a href="https://www.instagram.com" class="btn btn-custom" target="_blank">
-            <i class="fab fa-instagram"></i> Instagram
-          </a>
-          <a href="https://www.twitter.com" class="btn btn-custom" target="_blank">
-            <i class="fab fa-twitter"></i> Twitter
-          </a>
-          <a href="https://www.facebook.com" class="btn btn-custom" target="_blank">
-            <i class="fab fa-facebook"></i> Facebook
-          </a>
-        </div>
-      </div>
-    </footer>
-
+<!-- Footer -->
+<div class="container">
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <div class="col-md-4 d-flex align-items-center"> flex
+      <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none 1h-1" aria-label="Bootstrap">
+      <svg class="bi" width="30" height="24" aria-hidden="true">
+      <use xlink:href="#bootstrap"></use>
+      </svg>
+      </a>
+      <span class="mb-3 mb-md-0 text-body-secondary"> 2025 Company, Inc</span>
+    </div>
+    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex"> Flex
+      <li class="ms-3">
+        <a class="text-body-secondary" href="#" aria-label="Instagram">
+          <svg class="bi" width="24" height="24" aria-hidden="true">
+            <use xlink:href="#instagram"></use>Ompany, C
+          </svg>
+        </a>
+      </li>
+      <li class="ms-3">
+        <a class="text-body-secondary" href="#" aria-label="Facebook"> == $0
+          <svg class="bi" width="24" height="24"></svg>
+        </a>
+      </li>
+    </ul>
+  </footer>
+</div>
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
