--- a/index.html
+++ b/index.html
@@ -134,26 +134,16 @@
 <!-- Footer -->
 <div class="container">
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-    <div class="col-md-4 d-flex align-items-center"> flex
-      <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none 1h-1" aria-label="Bootstrap">
-      <svg class="bi" width="30" height="24" aria-hidden="true">
-      <use xlink:href="#bootstrap"></use>
-      </svg>
-      </a>
-      <span class="mb-3 mb-md-0 text-body-secondary"> 2025 Company, Inc</span>
+    <div class="col-md-4 d-flex align-items-center">
+      <a></a>
+      <span class="mb-3 mb-md-0 text-body-secondary">© 2025 Company, Inc</span>
     </div>
-    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex"> Flex
+    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
       <li class="ms-3">
-        <a class="text-body-secondary" href="#" aria-label="Instagram">
-          <svg class="bi" width="24" height="24" aria-hidden="true">
-            <use xlink:href="#instagram"></use>Ompany, C
-          </svg>
-        </a>
+        <a><i class="bi bi-instagram"></i></a>
       </li>
       <li class="ms-3">
-        <a class="text-body-secondary" href="#" aria-label="Facebook"> == $0
-          <svg class="bi" width="24" height="24"></svg>
-        </a>
+        <a><i class="bi bi-facebook"></i></a>
       </li>
     </ul>
   </footer>
