--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
 <div class="container">
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <div class="col-md-4 d-flex align-items-center">
-      <span class="mb-3 mb-md-0 text-body-secondary">© 2025 SI-Peduli Kampus, Inc</span>
+      <img src="img/uin.png" alt="logo" width="40" height="34">
+      <span class="mb-3 mb-md-0 text-body-secondary">  © 2025 SI-Peduli Kampus, Inc</span>
     </div>
     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
       <li class="ms-3">
