--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="col-md-7 mt-5">
           <h1 class="text-start fs-1 ms-5" style="color: #104c40">SI-Peduli Kampus </h1>
           <h1 class="text-start fs-4 ms-5" style="color: #104c40">Sistem Informasi Pengaduan Layanan Kampus </h1>
-          <a class="w-50 btn text-light ms-5 mb-2 mt-3" href="?menu=7" style="background-color: #d1a446" >SOP</a><br>
+          <a class="w-50 btn text-light ms-5 mb-2 mt-3" href="sop.html" style="background-color: #d1a446" >SOP</a><br>
           <a class="w-50 btn text-light ms-5 mb-2" href="pengaduan.html" style="background-color: #d1a446" >Buat Pengaduan</a>
         </div>
         <div class="col-md-5 mt-5">
@@ -135,7 +135,6 @@
 <div class="container">
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <div class="col-md-4 d-flex align-items-center">
-      <img src="img/uin.png" alt="logo" width="40" height="34">
       <span class="mb-3 mb-md-0 text-body-secondary">  © 2025 SI-Peduli Kampus, Inc</span>
     </div>
     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
