--- a/riwayat.html
+++ b/riwayat.html
@@ -50,7 +50,7 @@
 <div class="row justify-content-md-center">
 
 <!-- Riwayat -->
-<section id="pengaduan">
+<section id="pengaduan" class="mt-5">
 <div class="mt-5">
     <div class="card mt-5">
         <div class="card-body">
