--- a/pengaduan.html
+++ b/pengaduan.html
@@ -49,7 +49,7 @@
 
 <!-- Pengaduan -->
 <section id="pengaduan">
-<div class="mt-5">
+<div class="card mt-5">
 <h1>Tulis Aduan Baru</h1>
 <div class="container py-4 justify-content-center">
 	<form class="row g-2" method='POST' action="ajukan.php">
