--- a/pengaduan.html
+++ b/pengaduan.html
@@ -48,7 +48,7 @@
 <div class="row justify-content-md-center">
 
 <!-- Pengaduan -->
-<section id="pengaduan">
+<section id="pengaduan" class="mt-5">
 <div class="card mt-5">
 <h1>Tulis Aduan Baru</h1>
 <div class="container py-4 justify-content-center">
