--- a/riwayat.html
+++ b/riwayat.html
@@ -38,7 +38,7 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="?menu=6"><i class="bi bi-person"></i> Akun</a>
+          <a class="nav-link active" href="akun.html"><i class="bi bi-person"></i> Akun</a>
         </li>
       </ul>
     </div>
