--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <a class="navbar-brand fw-bold ms-5" href="#">
         <img src="img/uin.png" alt="logo" width="40" height="34"> SI-Peduli Kampus
     </a>
-    <a class=" btn text-light fs-6 ms-2" style="background-color: #d1a446" href="?menu=5">Masuk</a>
+    <a class=" btn text-light fs-6 ms-2" style="background-color: #d1a446" href="masuk.html">Masuk</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
